<resources>
    <string name="app_name">Bicifi</string>
    <string name="lbl_reach_25">Si logras menos de 25%</string>
    <string name="lbl_question_finances">Interrogante Financiero... Nivel Bicifi 1</string>
    <string name="lbl_reach_25_50">Entre 25% y 50%</string>
    <string name="lbl_dreamer">Soñador Financiero... Nivel Bicifi 2</string>
    <string name="lbl_reach_50_75">Entre 50% y 75%</string>
    <string name="lbl_executor">Ejecutor Financiero... Nivel Bicifi 3</string>
    <string name="lbl_reach_75">Más del 75%</string>
    <string name="lbl_leader">Lider Financiero... Nivel Bicifi 4</string>
    <string name="lbl_what_is_test">Que es Bicifi?</string>
    <string name="lbl_description_test">
        Test de salud financiera \n
        \n Le ayudaremos a mejorar sus finanzas  \n
        \n Acceder a base de conocimiento  \n
        \n No estará solo en su propio reto  \n
        \n Mejorará su autonomía financiera
    </string>
    <string name="lbl_challenge">RETO</string>
    <string name="lbl_description_challenge">Subir Nivel de Autonomia Financiera</string>
    <string name="lbl_percentage">% Puntaje</string>
    <string name="lbl_less_anciety">Reducir nivel Ansiedad Financiera</string>
    <string name="lbl_points">Puntaje $mocion</string>
    <string name="lbl_buy_membership">Comprando su membresia activara beneficios para lograr retos</string>
    <string name="lbl_Fremium">9 Días Gratis</string>
    <string name="lbl_fremium">9 Días Gratis</string>
    <string name="lbl_buy">Comprar</string>
    <string name="continue_with_google">Continuar con Google</string>
    <string name="continue_with_twitter">Continuar con Twitter</string>
    <string name="lbl_logo">Logo Bicifi</string>
    <string name="lbl_logo_google">Logo Google</string>
    <string name="auth_success_social_failed">Autenticación fallida</string>
    <string name="auth_success_social_network">Autenticación exitosa</string>
    <string name="fb_login_protocol_scheme">fb520603308886525</string>
    <string name="lbl_title_app">"Puntaje de Autonomia Financiera "</string>
    <string name="lbl_subtitle_app">Retese usted mismo, duerma tranquilo ...</string>
    <string name="lbl_privacy_policy">Para continuar, tu estas de acuerdo con los términos de uso de Bicifi y confirmas que tu has leído la política de privacidad de Bicifi</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="accept">Aceptar</string>
    <string name="title_notification_pass">Permiso de Notificaciones</string>
    <string name="textNotification">Mauris pellentesque ut augue ut placerat. Curabitur blandit leo vel orci fringilla, et tempor massa dignissim. Donec pellentesque tortor vitae
        nunc porta bibendum. Duis tempus ullamcorper odio, ac vestibulum arcu suscipit ut. Proin sem purus, viverra eu sem nec, laoreet vehicula ante.
        Aliquam elit justo, molestie vitae varius interdum, gravida vitae ante. Nam consequat ultricies libero vitae lobortis. Etiam eget gravida libero.
        Nunc nec rhoncus magna. Integer sit amet mauris dui. </string>
    <string name="cancel">Cancelar</string>
    <string name="title_profile">Perfil y Permisos</string>
    <string name="lbl_profile">Perfil</string>
    <string name="start_test">Iniciar prueba de autonomia financiera</string>
    <string name="tip_profile">TIP: Más servicios y beneficios si nos permite interactuar y saber donde vive.</string>
    <string name="textNotificationPass">Acepta notificaciones y tips vía email.</string>
    <string name="textLocationPass">Acepta reportar la ubicación de su dispositivo.</string>
    <string name="birthday">Fecha de nacimiento</string>
    <string name="family_rol">Rol familiar</string>
    <string name="education_level">Nivel de educación</string>
    <string name="year_experience">Años de experiencia</string>
    <string name="question">PREGUNTA #</string>
    <string name="lbl_description_last_question">Última respuesta</string>
    <string name="no">NO</string>
    <string name="yes">SI</string>
    <string name="title_question_emotional">Pregunta Extra Latido $mocional</string>
    <string name="lbl_description_last_question_emotional">Último latido $mocional</string>
    <string name="lbl_sentiment_vey_satisfied">Sin estres</string>
    <string name="lbl_sentiment_satisfied">No me estreso, pero me falta</string>
    <string name="lbl_sentiment_dissatisfied">Me esfuerzo pero igual me pone ansioso/a</string>
    <string name="lbl_sentiment_very_dissatisfied">Trato de ni pensar pues me estresa el tema</string>
    <string name="i_am_fine">Bien</string>
    <string name="i_am_defeated">Derrotado</string>
    <string name="i_am_soso">Ahí voy</string>
    <string name="i_am_almost_fine">Casi bien</string>
    <string name="lbl_image_tip">Tip</string>
    <string name="lbl_first_time">Primera Vez</string>
    <string name="lbl_explain_database_knowledge">Explicación extra base de conocimiento</string>
    <string name="lbl_question_emotional">Independientemente de su puntaje en el test de autonomia financiera. Como se siente usted respecto de la forma como administra su dinero y como se siente cuando piensa acerca de su futuro economico.</string>
    <string name="image_onboarding">image onboarding</string>
    <string-array name="rol_family_array">
        <item>Selecciona tu rol familiar</item>
        <item>Divorciado/a</item>
        <item>Partner</item>
        <item>Casado/a</item>
        <item>Soltero/a</item>
    </string-array>
    <string-array name="education_level_array">
        <item>Selecciona tu nivel de educación</item>
        <item>Bachiller</item>
        <item>Universidad</item>
        <item>Maestría</item>
        <item>Doctorado</item>
    </string-array>
    <string-array name="days_array">
        <item>Lunes</item>
        <item>Martes</item>
        <item>Miércoles</item>
        <item>Jueves</item>
        <item>Viernes</item>
        <item>Sábado</item>
        <item>Domingo</item>
    </string-array>
    <string-array name="hours_array">
        <item>6:00 am</item>
        <item>8:00 am</item>
        <item>10:00 am</item>
        <item>12:00 pm</item>
        <item>2:00 pm</item>
        <item>4:00 pm</item>
        <item>6:00 pm</item>
        <item>8:00 pm</item>
        <item>10:00 pm</item>
    </string-array>
    <string name="title_activity_home_screen">HomeScreenActivity</string>
    <string name="lbl_home">Inicio</string>
    <string name="lbl_emotion">$moción</string>
    <string name="lbl_trend">Tendencia</string>
    <string name="title_notifications">Notificaciones</string>
    <string name="lbl_share">Compartir</string>
    <string name="lbl_repeat_questions">Repetir Todo</string>
    <string name="lbl_repeat_failed_questions">Repetir Falladas</string>
    <string name="lbl_last_level">Ultimo puntaje: %d -  %s</string>
    <string name="lbl_last_record_emotional">Ultimo checkeo $mocion financiera</string>
    <string name="name_file_shared_preferences">bicifiappshared</string>
    <string name="lbl_finance_autonomy">Puntaje de Autonomia Financiera</string>
    <string name="lbl_success_emotional_state">Se ha registrado una nuevo estado emocional</string>
    <string name="error_profile_no_birthday">Por favor indique el cumpleaños</string>
    <string name="error_profile_no_familyrol">Por favor indique su rol</string>
    <string name="error_profile_no_educationlevel">Por favor indique su nivel educativo</string>
    <string name="error_profile_no_yearexperience">Por favor indique los años de experiencia</string>
    <string name="lbl_member_free">Membresia Gratis</string>
    <string name="lbl_signOut">Cerrar Sesión</string>
    <string name="title_terms_conditions">BICIFI APP TÉRMINOS Y CONDICIONES - POLÍTICA DE PRIVACIDAD Y USO DE DATOS</string>
    <string name="title_privacy_policy">POLÍTICA DE PRIVACIDAD</string>
</resources>