<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.challenge.ChallengeFragment">

    <TextView
        android:id="@+id/lblChallenge"
        style="@style/SuperTitles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/lbl_challenge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblChallengeDescription"
        style="@style/Titles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/lbl_description_challenge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imvUpLevel" />

    <TextView
        android:id="@+id/lblLessAnciety"
        style="@style/Titles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/lbl_less_anciety"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.683"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imvLevelAnxiety" />

    <TextView
        android:id="@+id/textView4"
        style="@style/SubTitles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="174dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="179dp"
        android:text="@string/lbl_points"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblLessAnciety" />

    <TextView
        android:id="@+id/textView5"
        style="@style/SubTitles"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="174dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="176dp"
        android:text="@string/lbl_percentage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblChallengeDescription" />

    <ImageView
        android:id="@+id/imvUpLevel"
        android:layout_width="70dp"
        android:layout_height="77dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_trending"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblChallenge" />

    <ImageView
        android:id="@+id/imvLevelAnxiety"
        android:layout_width="70dp"
        android:layout_height="77dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_assessment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView"
        style="@style/Titles"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:text="@string/lbl_buy_membership"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/btnFreemium"
        style="@style/ButtonMain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/lbl_fremium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.5" />

    <Button
        android:id="@+id/btnBuy"
        style="@style/ButtonMain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/lbl_buy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>